clusters/lab.k8s.callahan.house/tailscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
  labels:
    istio.io/use-waypoint: waypoint
    istio.io/dataplane-mode: ambient
